# advanced-data-systems

./: .gitignore  .gitmodules  README.md
exercise-01/: README.md  progress_log.md  report.md
exercise-01/scripts/: naive_bayes.sql  prep_data.sql  setup_env.sql  setup_test_env.script  setup_test_env.sql  train_udtf.py  udtf.py  udtf.sql
exercise-01/scripts/sentiment/: benchmark.py  naive_bayes.sql  plot.py  sentiment-benchmark.py  setup_env.sql  test_naive_bayes.sql
exercise-01/scripts/tpc/: plot.py  query01.sql  query05.sql  query18.sql  setup.sql  tpc-benchmark.py
exercise-02/: README.md
exercise-02/results/operator-trees/: ssb-benchmark-SSBQ1v1S100T1.log.dot  ssb-benchmark-SSBQ1v1S100T4.log.dot  ssb-benchmark-SSBQ1v1S100T8.log.dot  ssb-benchmark-SSBQ1v1S10T4.log.dot  ssb-benchmark-SSBQ1v1S1T4.log.dot  ssb-benchmark-SSBQ2v2S100T1.log.dot  ssb-benchmark-SSBQ2v2S100T4.log.dot  ssb-benchmark-SSBQ2v2S100T8.log.dot  ssb-benchmark-SSBQ2v2S10T4.log.dot  ssb-benchmark-SSBQ2v2S1T4.log.dot  (+5 more)
exercise-02/src/: .gitignore  CMakeLists.txt  Makefile  average-timings.py  gen-data-table.py  main.cpp  plot-operators.py  plot.py  render-operator-tree.py  seperate-benchmarks.sh
exercise-02/src/models/: models.py  operator.py  tree.py
exercise-02/src/scripts/: render-operator-tree.sh  seperate-benchmarks.sh
exercise-02/src/ssbgen/: CMakeLists.txt  bm_utils.c  dbgen  driver.c  dss.h  dsstypes.h  shared.h
exercise-02/src/ssbgen/include/: dss.h
exercise-03/: Makefile  parquetcsv-convert.py  plot.py
exercise-03/results/: benchmark-results.json  benchmark-results.json.old
(+13 files in other folders)
